--- a/studyCssWorld/1/index.html
+++ b/studyCssWorld/1/index.html
@@ -13,5 +13,23 @@
   <p title="title123">title123</p>
   <p title="1title">1title</p>
 
+  <!-- 流式布局 -->
+  <nav class="wrapper">
+    <a class="nav-item">1</a>
+    <a class="nav-item">2</a>
+    <a class="nav-item">3</a>
+  </nav>
+
+  <nav class="wrapper w">
+    <a class="nav-item">1</a>
+    <a class="nav-item">2</a>
+    <a class="nav-item">3</a>
+  </nav>
+
+  <!-- 一行居中 多行左对齐 -->
+  <section class="box">
+    <p>我是一行</p>
+    <p>我是多行，我不是居中的  我是左对齐，哈啊哈哈哈哈哈哈😝😝</p>
+  </section>
 </body>
 </html>
