--- a/studyCssWorld/1/index.html
+++ b/studyCssWorld/1/index.html
@@ -31,5 +31,10 @@
     <p>我是一行</p>
     <p>我是多行，我不是居中的  我是左对齐，哈啊哈哈哈哈哈哈😝😝</p>
   </section>
+
+  <p class="aotu">
+    <span class="ao"></span>
+    <span class="tu"></span>
+  </p>
 </body>
 </html>
