--- a/studyCssWorld/1/index.html
+++ b/studyCssWorld/1/index.html
@@ -31,5 +31,20 @@
     <p>我是一行</p>
     <p>我是多行，我不是居中的  我是左对齐，哈啊哈哈哈哈哈哈😝😝</p>
   </section>
+
+
+  <!-- 盒子模型 -->
+
+  <section class="box-s">
+    <section class="content-box"></section>
+    <section class="padding-box"></section>
+    <section class="border-box"></section>
+
+    <!-- 宽度分离原则 -->
+    <div class="father">
+      <div class="son">son</div>
+    </div>
+  </div>
+
 </body>
 </html>
