开始学习第四章 盒子

--- a/studyCssWorld/3流式布局/index.html
+++ b/studyCssWorld/3流式布局/index.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
-  
+  <p>宽度 高度 100%的例子</p>
+  <section class="box">
+    <section class="test1">relative</section>
+    <section class="test2">absolute</section>
+  </section>
 </body>
 
+  <p>通过最大宽度的设置来实现折叠动画</p>
+
+  <section class="slide">
+    <input type="checkbox" id="checked1">
+    <p>我是着样子的</p>
+    <section class="slide-more">
+      <p>我是用来展开的</p>
+      <p>我是用来展开的</p>
+      <p>我是用来展开的</p>
+      <p>我是用来展开的</p>
+    </section>
+    <label for="checked1" class="check-in">展开</label>
+    <label for="checked1" class="check-out">收起</label>
+    </section>
 </html>
