--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./index.css">
-  <title>3</title>
+  <title>4</title>
 </head>
 
 <body>
-  
+  <input type="button" value="1233">
+  <button>1233</button>
 </body>
 
 </html>
