--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -12,6 +12,12 @@
 <body>
   <input type="button" value="1233">
   <button>1233</button>
+
+  <section class="weilei1">
+    <p>伪类实现计数</p>
+    <p class="counter"></p>
+    <p class="add"></p>
+  </section>
 </body>
 
 </html>
