--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -18,6 +18,35 @@
     <p class="counter"></p>
     <p class="add"></p>
   </section>
-</body>
 
+  <section class="reset">
+    <section class="coun">
+      我是王小一
+    </section>
+    <section class="coun">
+      我是王小二
+      <section class="reset">
+        <section class="coun">
+          我是王小二大儿子
+          <section class="reset">
+            <section class="coun">
+              我是王小二大儿子的大儿子
+            </section>
+            <section class="coun">
+              我是王小二大儿子的二儿子
+            </section>
+          </section>
+        </section>
+        <section class="coun">
+          我是王小二第二个儿子
+        </section>
+        <section class="coun">
+          我是王小二第三个儿子
+        </section>
+      </section>
+    </section>
+  </section>
+
+  
+</body>
 </html>
