--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -47,6 +47,14 @@
     </section>
   </section>
 
-  
+  <p class="line">
+    1234
+    <span>123</span>
+  </p>
+
+  <p class="test1">
+    <a>登录</a>
+    <a>注册</a>
+  </p>
 </body>
 </html>
