--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -66,5 +66,15 @@
       <span>123456</span>
     </section>
   </section>
+
+  <p class="demo">
+    <i class="icon-menu1"></i>
+    <i class="icon-menu2"></i>
+  </p>
+
+  <section class="demo demo-text1">
+    <img src="https://avatars2.githubusercontent.com/u/15681693?s=460&v=4" alt="">
+    <p>测试文章111111111112哈哈哈哈哈案发后阿道夫😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁</p>
+  </section>
 </body>
 </html>
