--- a/studyCssWorld/4盒子尺寸/index.html
+++ b/studyCssWorld/4盒子尺寸/index.html
@@ -69,7 +69,9 @@
 
   <p class="demo">
     <i class="icon-menu1"></i>
+    <i class="icon-menu1-1"></i>
     <i class="icon-menu2"></i>
+
   </p>
 
   <section class="demo demo-text1">
@@ -80,5 +82,12 @@
   <section class="m-f"> 
     <section class="m-s"></section>
   </section>
+
+  <section class="z">
+    <section class="z-s"></section>
+  </section>
+
+  <a class="upload"></a>
+  <a class="san-jiao"></a>
 </body>
 </html>
