--- a/studyCssWorld/6/index.html
+++ b/studyCssWorld/6/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./index.css">
-  <title>内联元素与流</title>
+  <title>3</title>
 </head>
 
 <body>
