--- a/studyCssWorld/5内联/index.html
+++ b/studyCssWorld/5内联/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-  
+<section class="test1">
+    <p>查看文字中线xxxxaaabbvbf
+      <img src="https://avatars2.githubusercontent.com/u/15681693?s=460&v=4" alt="">
+    </p>
+  </section>
 </body>
 
 </html>
