--- a/studyCssWorld/5内联/index.html
+++ b/studyCssWorld/5内联/index.html
@@ -10,11 +10,25 @@
 </head>
 
 <body>
-<section class="test1">
+  <section class="test1">
     <p>查看文字中线xxxxaaabbvbf
       <img src="https://avatars2.githubusercontent.com/u/15681693?s=460&v=4" alt="">
     </p>
   </section>
+
+  <section class="test2">
+    <span>测试</span>
+  </section>
+
+  <section class="test3">
+    <span>测试</span>
+  </section>
+
+  <section class="test4">
+    x<span>测试x</span>
+  </section>
+
+  <span>H<sub>2</sub>O<sub>2</sub></span></span>
 </body>
 
 </html>
