--- a/studyCssWorld/6/index.html
+++ b/studyCssWorld/6/index.html
@@ -6,11 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./index.css">
-  <title>3</title>
+  <title>流的保护和破坏</title>
 </head>
 
-<body>
-  
+<body> 
+  <p class="test1">我们好像在这里是这燕子阿发阿发啊</p>
+  <p class="test2">我们好像在这里是这燕子阿发阿发啊我们好像在这里是这燕子阿发阿发啊</p>
+
+  <p class="title">普通锚点实现</p>
+  <section class="box-list">
+    <section class="box-item" id="item1">1</section>
+    <section class="box-item" id="item2">2</section>
+    <section class="box-item" id="item3">3</section>
+    <section class="box-item" id="item4">4</section>
+  </section>
+  <section class="tab-list">
+    <a href="#item1">item1</a>
+    <a href="#item2">item2</a>
+    <a href="#item3">item3</a>
+    <a href="#item4">item4</a>
+  </section>
+
+  <p class="title">inout focus实现</p>
+  <section class="box-list">
+    <section class="box-item"><input id="input1">1</section>
+    <section class="box-item"><input id="input2">2</section>
+    <section class="box-item"><input id="input3">3</section>
+    <section class="box-item"><input id="input4">4</section>
+  </section>
+  <section class="tab-list">
+    <label for="input1">input1</label>
+    <label for="input2">input2</label>
+    <label for="input3">input3</label>
+    <label for="input4">input4</label>
+  </section>
 </body>
 
 </html>
