--- a/studyCssWorld/6/index.html
+++ b/studyCssWorld/6/index.html
@@ -1,45 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./index.css">
-  <title>流的保护和破坏</title>
+  <meta charset=utf-8>
+  <meta name=renderer content=webkit>
+  <meta http-equiv=X-UA-Compatible content="IE=edge">
+  <meta name=description content="a blog for vue belong to xyxiao">
+  <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta name=apple-mobile-web-app-capable content=yes>
+  <title>goodboy</title>
+  <link rel="shortcut icon" href=https://vuejs.org/images/logo.png> <link rel=stylesheet href=//at.alicdn.com/t/font_dcy0f4bi1p833di.css
+    media=screen title="no title">
+  <link rel=stylesheet href=//at.alicdn.com/t/font_8ycii6y497djkyb9.css> <link href=/vue-blog/static/css/app7.21.css
+    rel=stylesheet>
 </head>
 
-<body> 
-  <p class="test1">我们好像在这里是这燕子阿发阿发啊</p>
-  <p class="test2">我们好像在这里是这燕子阿发阿发啊我们好像在这里是这燕子阿发阿发啊</p>
-
-  <p class="title">普通锚点实现</p>
-  <section class="box-list">
-    <section class="box-item" id="item1">1</section>
-    <section class="box-item" id="item2">2</section>
-    <section class="box-item" id="item3">3</section>
-    <section class="box-item" id="item4">4</section>
-  </section>
-  <section class="tab-list">
-    <a href="#item1">item1</a>
-    <a href="#item2">item2</a>
-    <a href="#item3">item3</a>
-    <a href="#item4">item4</a>
-  </section>
-
-  <p class="title">inout focus实现</p>
-  <section class="box-list">
-    <section class="box-item"><input id="input1">1</section>
-    <section class="box-item"><input id="input2">2</section>
-    <section class="box-item"><input id="input3">3</section>
-    <section class="box-item"><input id="input4">4</section>
-  </section>
-  <section class="tab-list">
-    <label for="input1">input1</label>
-    <label for="input2">input2</label>
-    <label for="input3">input3</label>
-    <label for="input4">input4</label>
-  </section>
-</body>
-
-</html>
+<body>
+  <div id=app></div>
+  <script>var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?5c634e4baadb5d5435f942c88eda3770";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();</script>
+  <script type=text/javascript src=/vue-blog/static/js/manifest7.21.js> </script> <script type=text/javascript
+    src=/vue-blog/static/js/vendor7.21.js> </script> <script type=text/javascript src=/vue-blog/static/js/app7.21.js>
+    </script> </body> </html>
