--- a/ts/2.webpack/index.html
+++ b/ts/2.webpack/index.html
@@ -7,6 +7,6 @@
   <title>webpack ts</title>
 </head>
 <body>
-  <script src="dist/build.js"></script>
+  <script src="dist/index.js"></script>
 </body>
 </html>
