--- a/ts/2.webpack/index2.html
+++ b/ts/2.webpack/index2.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>webpack ts</title>
+  <title>webpack js</title>
 </head>
 <body>
-  <script src="dist/index.js"></script> 
+  <script src="js/index.js"></script>  
 </body>
 </html>
