--- a/ts/3-canvas/1-黑白算法.html
+++ b/ts/3-canvas/1-黑白算法.html
@@ -45,9 +45,14 @@
       <img src="http://cdn.xyxiao.cn/bg10.jpg" id="img2" alt="">
     </section>
     <section class="wei">
-      <p>微软文档算法 之 最简单的灰度为 r+g+b / 3</p>
+      <p>微软文档算法 r+g+b / 3</p>
       <section class="img"></section>
     </section>
+
+    <section class="matlab">
+        <p>MATLAB算法之加权平均值</p>
+        <section class="img"></section>
+      </section>
 
     <section class="ps">
       <p title="gray = (max - mid) * ratioMax + (mid - min) * ratioMaxMid + min">ps的黑白算法</p>
