--- a/ts/3-canvas/1-图片灰度算法.html
+++ b/ts/3-canvas/1-图片灰度算法.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>canvas之实现图片ps黑白算法</title>
+  <title>图片灰度算法-灰度图片</title>
 </head>
 <style>
   main {
@@ -41,7 +41,7 @@
       <img src="http://cdn.xyxiao.cn/bg10.jpg" id="img1" alt="">
     </section>
     <section>
-      <p>css实现的黑白</p>
+      <p>css实现的灰度</p>
       <img src="http://cdn.xyxiao.cn/bg10.jpg" id="img2" alt="">
     </section>
     <section class="wei">
@@ -55,7 +55,7 @@
       </section>
 
     <section class="ps">
-      <p title="gray = (max - mid) * ratioMax + (mid - min) * ratioMaxMid + min">ps的黑白算法</p>
+      <p title="gray = (max - mid) * ratioMax + (mid - min) * ratioMaxMid + min">ps的灰度算法</p>
       <section class="img"></section>
     </section>
 
@@ -63,6 +63,7 @@
       <input type="file" id="file">
     </section>
   </main>
+  <script src="dist/common.js"></script>
   <script src="dist/1.js"></script>
 </body>
 
