--- a/ts/3-canvas/1-图片灰度算法.html
+++ b/ts/3-canvas/1-图片灰度算法.html
@@ -40,19 +40,26 @@
       <p>原图</p>
       <img src="http://cdn.xyxiao.cn/bg10.jpg" id="img1" alt="">
     </section>
+
     <section>
       <p>css实现的灰度</p>
       <img src="http://cdn.xyxiao.cn/bg10.jpg" id="img2" alt="">
     </section>
+
+    <section class="canvas-filter">
+      <p>canvas filter</p>
+      <section class="img"></section>
+    </section>
+
     <section class="wei">
       <p>微软文档算法 r+g+b / 3</p>
       <section class="img"></section>
     </section>
 
     <section class="matlab">
-        <p>MATLAB算法之加权平均值</p>
-        <section class="img"></section>
-      </section>
+      <p>MATLAB算法之加权平均值</p>
+      <section class="img"></section>
+    </section>
 
     <section class="ps">
       <p title="gray = (max - mid) * ratioMax + (mid - min) * ratioMaxMid + min">ps的灰度算法</p>
