添加打印机

--- a/test-art/index.html
+++ b/test-art/index.html
@@ -792,7 +792,7 @@
         </div>
   </script>
 
-  <script src="./lodopFuncs.js"></script>
+  <script src="./LodopFuncs.js"></script>
   <script src="./test2.js"></script>
 
   <script type="text/javascript">
