--- a/test-art/index.html
+++ b/test-art/index.html
@@ -696,7 +696,8 @@
                       </ul>
                       {{each cisExamResults result}}
                       <p style="margin-bottom: 10px; margin-top: 15px">《{{result.peItemName}}》</p>
-                      <p>检查诊断：{{result.checkDiganosis}}</p>
+                      <p>检查诊断：</p>
+                      <p>{{result.checkDiganosis}}</p>
                       <div class="examine">
                         <p>
                           <label>检查人：</label>
@@ -720,7 +721,8 @@
                       {{each pacsExamResults result}}
                       <p style="margin-bottom: 10px; margin-top: 15px">《{{result.peItemName}}》</p>
                       <p>检查描述：{{result.checkDescription}}</p>
-                      <p>检查诊断：{{result.checkDiganosis}}</p>
+                      <p>检查诊断：</p>
+                      <p>{{result.checkDiganosis}}</p>
                       <div class="examine">
                         <p>
                           <label>检查人：</label>
@@ -816,7 +818,7 @@
       data = JSON.parse(data)
 
       const headerField = ['serialNum', 'patientName', 'patientPeDate', 'patientSex', 'patientAge'];
-      const innerHtml = template('render', data)
+      let innerHtml = template('render', data)
       console.log(lodop)
       lodop.ADD_PRINT_HTM(0, 0, 'BottomMargin:2mm', '100%', template('bgRender', {}));
       // 页眉
@@ -827,12 +829,14 @@
       }
       const headerHtml = template('headRender', headerData)
       // 给所添加的文本定义样式,0：表示新添加的元素，相应的属性，相应的值
+      
       lodop.ADD_PRINT_HTM(0, 0, '100%', '100%', headerHtml);
       lodop.SET_PRINT_STYLEA(0, 'ItemType', 1);// 设置页眉页脚
       lodop.SET_PRINT_STYLEA(0, 'Horient', 3);
       lodop.SET_PRINT_STYLEA(0, 'PageUnIndex', ['1', '2']);// 1页、2页不输出，排除法。
 
       lodop.SET_PRINT_MODE('PRINT_DUPLEX', 2);
+      innerHtml = innerHtml.replace(/&#60;br \/&#62;/g, '<br />')
       lodop.ADD_PRINT_HTM('25mm', 0, 'BottomMargin:2mm', 'BottomMargin:10mm', innerHtml);
       lodop.NEWPAGEA();
 
@@ -843,7 +847,9 @@
       lodop.NEWPAGEA();
       document.getElementById('test2').innerHTML = totalRender
       
-      lodop.ADD_PRINT_HTM('25mm', 0, 'BottomMargin:2mm', 'BottomMargin:10mm', template('branchRender', data));
+      let branchData = template('branchRender', data)
+      branchData = branchData.replace(/&#60;br \/&#62;/g, '<br />')
+      lodop.ADD_PRINT_HTM('25mm', 0, 'BottomMargin:2mm', 'BottomMargin:10mm', branchData);
       // 页码显示
       lodop.ADD_PRINT_HTM(1085, 320, 300, 100, "<div style='font-size:14px; color:gray;'>——  <span tdata='pageNo-2'>第##页</span>/<span tdata='pageCount-2'>共##页</span>  ——</div>");
       lodop.SET_PRINT_STYLEA(0, 'ItemType', 1);// 设置页眉页脚
