添加打印机

--- a/test-art/index.html
+++ b/test-art/index.html
@@ -696,8 +696,7 @@
                       </ul>
                       {{each cisExamResults result}}
                       <p style="margin-bottom: 10px; margin-top: 15px">《{{result.peItemName}}》</p>
-                      <p>检查诊断：</p>
-                      <p>{{result.checkDiganosis}}</p>
+                      <p>检查诊断：{{result.checkDiganosis}}</p>
                       <div class="examine">
                         <p>
                           <label>检查人：</label>
