--- a/test-art/index.html
+++ b/test-art/index.html
@@ -88,8 +88,15 @@
           font-size: 16px;
           padding-left: 17px;
           margin-bottom: 5px;
-          border-bottom: solid 1px #D8E7EF;
-          line-height: 30px;
+          line-height: 22pt;
+          /* border-bottom: solid 1px #D8E7EF; */
+        }
+
+        .overview .result .line {
+          display: inline-block;
+          width: 100%;
+          height: 1px;
+          background: #D8E7EF;;
         }
 
         .overview .result .exception {
@@ -139,6 +146,7 @@
                   <ul class="name">
                     <li>{{result.diseaseName}}</li>
                   </ul>
+                  <span class="line"></span>
                   <div class="advice">
                     <p>{{result.suggestion}}</p>
                   </div>
@@ -797,7 +805,7 @@
   </script>
 
   <script src="./LodopFuncs.js"></script>
-  <script src="./test2.js"></script>
+  <script src="./test4.js"></script>
 
   <script type="text/javascript">
     // 打印
