--- a/ts/3-canvas/index.html
+++ b/ts/3-canvas/index.html
@@ -7,7 +7,9 @@
   <title>各种图片算法合集</title>
 </head>
 <body>
-  <a href="./1-图片灰度算法.html" target="_blank">图片灰度算法</a>
-  <a href="./2-图片黑白算法.html" target="_blank" >图片黑白算法</a>
+  <a href="./1-图片灰度算法.html">图片灰度算法</a>
+  <a href="./2-图片黑白算法.html" >图片黑白算法</a>
+  <a href="./3-图片之老照片模式.html" >图片之老照片模式</a>
+  <a href="./4-图片对比度.html" >图片对比度</a>
 </body>
 </html>
