--- a/test-art/index.html
+++ b/test-art/index.html
@@ -881,8 +881,8 @@
       data = data.replace(/\r?\\n/g, '<br />')
       data = JSON.parse(data)
 
-      LODOP.ADD_PRINT_IMAGE(30, 30, '100%', 'BottomMargin:2mm',`<img border='0' src='${imgUrl}' />`);
-		  LODOP.SET_PRINT_STYLEA(0,"Stretch", 1);//按原图比例(不变形)缩放模式
+     // LODOP.ADD_PRINT_IMAGE(30, 30, '100%', 'BottomMargin:2mm',`<img border='0' src='${imgUrl}' />`);
+		 // LODOP.SET_PRINT_STYLEA(0,"Stretch", 1);//按原图比例(不变形)缩放模式
       lodop.NEWPAGEA();
 
 
